3DLayoutScriptIDE/obj/Debug/DDD_layout_scriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\UnitySzakdolgozat1\3DLayoutScriptIDE\3DLayoutScriptIDE\DDD_layout_script.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace _3D_layout_script {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class DDD_layout_scriptParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, EQ=4, PLUS=5, PLUS_ASS=6, MINUS=7, MINUS_ASS=8, 
		MULT=9, MULT_ASS=10, DIV=11, DIV_ASS=12, MOD=13, COMMA=14, COLON=15, SEMI=16, 
		CURLY_O=17, CURLY_C=18, SQUARE_O=19, SQUARE_C=20, BRACKET_O=21, BRACKET_C=22, 
		FOR=23, IN=24, IF=25, ELSE=26, STEP=27, RANGE=28, INCLUDE=29, OBJECT_TYPE=30, 
		ATTR_GROUP=31, STRING=32, CONST=33, VAR=34, ID=35, TYPE=36, INT=37, FLOAT=38, 
		ATTRIBUTE=39, COMP_OP=40, WHITESPACE=41, BLOCK_COMMENT=42, LINE_COMMENT=43;
	public const int
		RULE_signed_id = 0, RULE_vec3 = 1, RULE_type_val = 2, RULE_binary_op = 3, 
		RULE_other_binary_op = 4, RULE_xyz = 5, RULE_modifiable_xyz = 6, RULE_simple_expression = 7, 
		RULE_simple_modifyable_exp = 8, RULE_operation_helper = 9, RULE_operation = 10, 
		RULE_variable_decl = 11, RULE_assign_statement = 12, RULE_attr = 13, RULE_attr_group = 14, 
		RULE_include_statement = 15, RULE_object_content = 16, RULE_object_block = 17, 
		RULE_if_condition = 18, RULE_if_content = 19, RULE_if_statement = 20, 
		RULE_else_if_statement = 21, RULE_else_statement = 22, RULE_for_loop_statement = 23, 
		RULE_range_and_step = 24, RULE_for_loop = 25, RULE_program_statement = 26, 
		RULE_program = 27;
	public static readonly string[] ruleNames = {
		"signed_id", "vec3", "type_val", "binary_op", "other_binary_op", "xyz", 
		"modifiable_xyz", "simple_expression", "simple_modifyable_exp", "operation_helper", 
		"operation", "variable_decl", "assign_statement", "attr", "attr_group", 
		"include_statement", "object_content", "object_block", "if_condition", 
		"if_content", "if_statement", "else_if_statement", "else_statement", "for_loop_statement", 
		"range_and_step", "for_loop", "program_statement", "program"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.x'", "'.y'", "'.z'", "'='", "'+'", "'+='", "'-'", "'-='", "'*'", 
		"'*='", "'/'", "'/='", "'%'", "','", "':'", "';'", "'{'", "'}'", "'['", 
		"']'", "'('", "')'", "'for'", "'in'", "'if'", "'else'", "'step'", "'range'", 
		"'@include'", null, "'attr-group'", null, "'const'", "'var'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "EQ", "PLUS", "PLUS_ASS", "MINUS", "MINUS_ASS", 
		"MULT", "MULT_ASS", "DIV", "DIV_ASS", "MOD", "COMMA", "COLON", "SEMI", 
		"CURLY_O", "CURLY_C", "SQUARE_O", "SQUARE_C", "BRACKET_O", "BRACKET_C", 
		"FOR", "IN", "IF", "ELSE", "STEP", "RANGE", "INCLUDE", "OBJECT_TYPE", 
		"ATTR_GROUP", "STRING", "CONST", "VAR", "ID", "TYPE", "INT", "FLOAT", 
		"ATTRIBUTE", "COMP_OP", "WHITESPACE", "BLOCK_COMMENT", "LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DDD_layout_script.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public DDD_layout_scriptParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Signed_idContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(DDD_layout_scriptParser.ID, 0); }
		public Signed_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_signed_id; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterSigned_id(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitSigned_id(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSigned_id(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Signed_idContext signed_id() {
		Signed_idContext _localctx = new Signed_idContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_signed_id);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==PLUS || _la==MINUS) {
				{
				State = 56;
				_la = _input.La(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				}
			}

			State = 59; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Vec3Context : ParserRuleContext {
		public ITerminalNode SQUARE_O() { return GetToken(DDD_layout_scriptParser.SQUARE_O, 0); }
		public OperationContext[] operation() {
			return GetRuleContexts<OperationContext>();
		}
		public OperationContext operation(int i) {
			return GetRuleContext<OperationContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(DDD_layout_scriptParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(DDD_layout_scriptParser.COMMA, i);
		}
		public ITerminalNode SQUARE_C() { return GetToken(DDD_layout_scriptParser.SQUARE_C, 0); }
		public Vec3Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vec3; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterVec3(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitVec3(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVec3(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Vec3Context vec3() {
		Vec3Context _localctx = new Vec3Context(_ctx, State);
		EnterRule(_localctx, 2, RULE_vec3);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==PLUS || _la==MINUS) {
				{
				State = 61;
				_la = _input.La(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				}
			}

			State = 64; Match(SQUARE_O);
			State = 65; operation();
			State = 66; Match(COMMA);
			State = 67; operation();
			State = 68; Match(COMMA);
			State = 69; operation();
			State = 70; Match(SQUARE_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_valContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(DDD_layout_scriptParser.INT, 0); }
		public ITerminalNode FLOAT() { return GetToken(DDD_layout_scriptParser.FLOAT, 0); }
		public Vec3Context vec3() {
			return GetRuleContext<Vec3Context>(0);
		}
		public Type_valContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_val; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterType_val(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitType_val(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType_val(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Type_valContext type_val() {
		Type_valContext _localctx = new Type_valContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_type_val);
		try {
			State = 75;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case INT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 72; Match(INT);
				}
				break;
			case FLOAT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73; Match(FLOAT);
				}
				break;
			case PLUS:
			case MINUS:
			case SQUARE_O:
				EnterOuterAlt(_localctx, 3);
				{
				State = 74; vec3();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Binary_opContext : ParserRuleContext {
		public ITerminalNode PLUS() { return GetToken(DDD_layout_scriptParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(DDD_layout_scriptParser.MINUS, 0); }
		public ITerminalNode MULT() { return GetToken(DDD_layout_scriptParser.MULT, 0); }
		public ITerminalNode DIV() { return GetToken(DDD_layout_scriptParser.DIV, 0); }
		public ITerminalNode MOD() { return GetToken(DDD_layout_scriptParser.MOD, 0); }
		public Binary_opContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_binary_op; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterBinary_op(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitBinary_op(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinary_op(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Binary_opContext binary_op() {
		Binary_opContext _localctx = new Binary_opContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_binary_op);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 77;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULT) | (1L << DIV) | (1L << MOD))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Other_binary_opContext : ParserRuleContext {
		public ITerminalNode PLUS_ASS() { return GetToken(DDD_layout_scriptParser.PLUS_ASS, 0); }
		public ITerminalNode MINUS_ASS() { return GetToken(DDD_layout_scriptParser.MINUS_ASS, 0); }
		public ITerminalNode MULT_ASS() { return GetToken(DDD_layout_scriptParser.MULT_ASS, 0); }
		public ITerminalNode DIV_ASS() { return GetToken(DDD_layout_scriptParser.DIV_ASS, 0); }
		public Other_binary_opContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_other_binary_op; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterOther_binary_op(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitOther_binary_op(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOther_binary_op(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Other_binary_opContext other_binary_op() {
		Other_binary_opContext _localctx = new Other_binary_opContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_other_binary_op);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS_ASS) | (1L << MINUS_ASS) | (1L << MULT_ASS) | (1L << DIV_ASS))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class XyzContext : ParserRuleContext {
		public Signed_idContext signed_id() {
			return GetRuleContext<Signed_idContext>(0);
		}
		public XyzContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_xyz; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterXyz(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitXyz(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitXyz(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public XyzContext xyz() {
		XyzContext _localctx = new XyzContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_xyz);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; signed_id();
			State = 82;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Modifiable_xyzContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(DDD_layout_scriptParser.ID, 0); }
		public Modifiable_xyzContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modifiable_xyz; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterModifiable_xyz(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitModifiable_xyz(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModifiable_xyz(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Modifiable_xyzContext modifiable_xyz() {
		Modifiable_xyzContext _localctx = new Modifiable_xyzContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_modifiable_xyz);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; Match(ID);
			State = 85;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Simple_expressionContext : ParserRuleContext {
		public Signed_idContext signed_id() {
			return GetRuleContext<Signed_idContext>(0);
		}
		public Type_valContext type_val() {
			return GetRuleContext<Type_valContext>(0);
		}
		public XyzContext xyz() {
			return GetRuleContext<XyzContext>(0);
		}
		public Simple_expressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simple_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterSimple_expression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitSimple_expression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimple_expression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Simple_expressionContext simple_expression() {
		Simple_expressionContext _localctx = new Simple_expressionContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_simple_expression);
		try {
			State = 90;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87; signed_id();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 88; type_val();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 89; xyz();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Simple_modifyable_expContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(DDD_layout_scriptParser.ID, 0); }
		public Modifiable_xyzContext modifiable_xyz() {
			return GetRuleContext<Modifiable_xyzContext>(0);
		}
		public Simple_modifyable_expContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_simple_modifyable_exp; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterSimple_modifyable_exp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitSimple_modifyable_exp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSimple_modifyable_exp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Simple_modifyable_expContext simple_modifyable_exp() {
		Simple_modifyable_expContext _localctx = new Simple_modifyable_expContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_simple_modifyable_exp);
		try {
			State = 94;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92; Match(ID);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93; modifiable_xyz();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Operation_helperContext : ParserRuleContext {
		public Simple_expressionContext simple_expression() {
			return GetRuleContext<Simple_expressionContext>(0);
		}
		public ITerminalNode BRACKET_O() { return GetToken(DDD_layout_scriptParser.BRACKET_O, 0); }
		public OperationContext operation() {
			return GetRuleContext<OperationContext>(0);
		}
		public ITerminalNode BRACKET_C() { return GetToken(DDD_layout_scriptParser.BRACKET_C, 0); }
		public Operation_helperContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operation_helper; } }
		public override void EnterRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.EnterOperation_helper(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IDDD_layout_scriptListener typedListener = listener as IDDD_layout_scriptListener;
			if (typedListener != null) typedListener.ExitOperation_helper(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDDD_layout_scriptVisitor<TResult> typedVisitor = visitor as IDDD_layout_scriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperation_helper(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Operation_helperContext operation_helper() {
		Operation_helperContext _localctx = new Operation_helperContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_operation_helper);
		try {
			State = 101;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case PLUS:
			case MINUS:
			case SQUARE_O:
			case ID:
			case INT:
			case FLOAT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96; simple_expression();
				}
				break;
			case BRACKET_O:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 97; Match(BRACKET_O);
				State = 98; operation();
				State = 99; Match(BRACKET_C);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
